// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleBasedViewModelProvider getUnifiedRuleResults for combination {"isExpanded": false, "isHighlighted": true, "isSelected": false} 1`] = `
Object {
  "allCardsCollapsed": true,
  "cards": Object {
    "fail": Array [
      Object {
        "description": "stub_description_rule1",
        "guidance": Array [
          Object {
            "href": "stub_guidance_href_rule1",
            "text": "stub_guidance_text_rule1",
          },
        ],
        "id": "rule1",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": null,
            "highlightStatus": "visible",
            "identifiers": null,
            "isSelected": false,
            "resolution": null,
            "ruleId": "rule1",
            "status": "fail",
            "uid": "stub_uid",
          },
        ],
        "status": "fail",
        "url": "stub_url_rule1",
      },
    ],
    "inapplicable": Array [
      Object {
        "description": "stub_description_rule3",
        "guidance": Array [
          Object {
            "href": "stub_guidance_href_rule3",
            "text": "stub_guidance_text_rule3",
          },
        ],
        "id": "rule3",
        "isExpanded": false,
        "nodes": Array [],
        "status": "inapplicable",
        "url": "stub_url_rule3",
      },
    ],
    "pass": Array [
      Object {
        "description": "stub_description_rule1",
        "guidance": Array [
          Object {
            "href": "stub_guidance_href_rule1",
            "text": "stub_guidance_text_rule1",
          },
        ],
        "id": "rule1",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": null,
            "highlightStatus": "unavailable",
            "identifiers": null,
            "isSelected": false,
            "resolution": null,
            "ruleId": "rule1",
            "status": "pass",
            "uid": "stub_uid",
          },
        ],
        "status": "pass",
        "url": "stub_url_rule1",
      },
    ],
    "unknown": Array [
      Object {
        "description": "stub_description_rule2",
        "guidance": Array [
          Object {
            "href": "stub_guidance_href_rule2",
            "text": "stub_guidance_text_rule2",
          },
        ],
        "id": "rule2",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": null,
            "highlightStatus": "unavailable",
            "identifiers": null,
            "isSelected": false,
            "resolution": null,
            "ruleId": "rule2",
            "status": "unknown",
            "uid": "stub_uid",
          },
          Object {
            "descriptors": null,
            "highlightStatus": "unavailable",
            "identifiers": null,
            "isSelected": false,
            "resolution": null,
            "ruleId": "rule2",
            "status": "unknown",
            "uid": "stub_uid",
          },
        ],
        "status": "unknown",
        "url": "stub_url_rule2",
      },
    ],
  },
  "visualHelperEnabled": true,
}
`;

exports[`RuleBasedViewModelProvider getUnifiedRuleResults for combination {"isExpanded": true, "isHighlighted": false, "isSelected": false} 1`] = `
Object {
  "allCardsCollapsed": true,
  "cards": Object {
    "fail": Array [
      Object {
        "description": "stub_description_rule1",
        "guidance": Array [
          Object {
            "href": "stub_guidance_href_rule1",
            "text": "stub_guidance_text_rule1",
          },
        ],
        "id": "rule1",
        "isExpanded": true,
        "nodes": Array [
          Object {
            "descriptors": null,
            "highlightStatus": "hidden",
            "identifiers": null,
            "isSelected": false,
            "resolution": null,
            "ruleId": "rule1",
            "status": "fail",
            "uid": "stub_uid",
          },
        ],
        "status": "fail",
        "url": "stub_url_rule1",
      },
    ],
    "inapplicable": Array [
      Object {
        "description": "stub_description_rule3",
        "guidance": Array [
          Object {
            "href": "stub_guidance_href_rule3",
            "text": "stub_guidance_text_rule3",
          },
        ],
        "id": "rule3",
        "isExpanded": false,
        "nodes": Array [],
        "status": "inapplicable",
        "url": "stub_url_rule3",
      },
    ],
    "pass": Array [
      Object {
        "description": "stub_description_rule1",
        "guidance": Array [
          Object {
            "href": "stub_guidance_href_rule1",
            "text": "stub_guidance_text_rule1",
          },
        ],
        "id": "rule1",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": null,
            "highlightStatus": "unavailable",
            "identifiers": null,
            "isSelected": false,
            "resolution": null,
            "ruleId": "rule1",
            "status": "pass",
            "uid": "stub_uid",
          },
        ],
        "status": "pass",
        "url": "stub_url_rule1",
      },
    ],
    "unknown": Array [
      Object {
        "description": "stub_description_rule2",
        "guidance": Array [
          Object {
            "href": "stub_guidance_href_rule2",
            "text": "stub_guidance_text_rule2",
          },
        ],
        "id": "rule2",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": null,
            "highlightStatus": "unavailable",
            "identifiers": null,
            "isSelected": false,
            "resolution": null,
            "ruleId": "rule2",
            "status": "unknown",
            "uid": "stub_uid",
          },
          Object {
            "descriptors": null,
            "highlightStatus": "unavailable",
            "identifiers": null,
            "isSelected": false,
            "resolution": null,
            "ruleId": "rule2",
            "status": "unknown",
            "uid": "stub_uid",
          },
        ],
        "status": "unknown",
        "url": "stub_url_rule2",
      },
    ],
  },
  "visualHelperEnabled": true,
}
`;

exports[`RuleBasedViewModelProvider getUnifiedRuleResults for combination {"isExpanded": true, "isHighlighted": true, "isSelected": true} 1`] = `
Object {
  "allCardsCollapsed": true,
  "cards": Object {
    "fail": Array [
      Object {
        "description": "stub_description_rule1",
        "guidance": Array [
          Object {
            "href": "stub_guidance_href_rule1",
            "text": "stub_guidance_text_rule1",
          },
        ],
        "id": "rule1",
        "isExpanded": true,
        "nodes": Array [
          Object {
            "descriptors": null,
            "highlightStatus": "visible",
            "identifiers": null,
            "isSelected": true,
            "resolution": null,
            "ruleId": "rule1",
            "status": "fail",
            "uid": "stub_uid",
          },
        ],
        "status": "fail",
        "url": "stub_url_rule1",
      },
    ],
    "inapplicable": Array [
      Object {
        "description": "stub_description_rule3",
        "guidance": Array [
          Object {
            "href": "stub_guidance_href_rule3",
            "text": "stub_guidance_text_rule3",
          },
        ],
        "id": "rule3",
        "isExpanded": false,
        "nodes": Array [],
        "status": "inapplicable",
        "url": "stub_url_rule3",
      },
    ],
    "pass": Array [
      Object {
        "description": "stub_description_rule1",
        "guidance": Array [
          Object {
            "href": "stub_guidance_href_rule1",
            "text": "stub_guidance_text_rule1",
          },
        ],
        "id": "rule1",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": null,
            "highlightStatus": "unavailable",
            "identifiers": null,
            "isSelected": false,
            "resolution": null,
            "ruleId": "rule1",
            "status": "pass",
            "uid": "stub_uid",
          },
        ],
        "status": "pass",
        "url": "stub_url_rule1",
      },
    ],
    "unknown": Array [
      Object {
        "description": "stub_description_rule2",
        "guidance": Array [
          Object {
            "href": "stub_guidance_href_rule2",
            "text": "stub_guidance_text_rule2",
          },
        ],
        "id": "rule2",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": null,
            "highlightStatus": "unavailable",
            "identifiers": null,
            "isSelected": false,
            "resolution": null,
            "ruleId": "rule2",
            "status": "unknown",
            "uid": "stub_uid",
          },
          Object {
            "descriptors": null,
            "highlightStatus": "unavailable",
            "identifiers": null,
            "isSelected": false,
            "resolution": null,
            "ruleId": "rule2",
            "status": "unknown",
            "uid": "stub_uid",
          },
        ],
        "status": "unknown",
        "url": "stub_url_rule2",
      },
    ],
  },
  "visualHelperEnabled": true,
}
`;
